--- a/boselecta/pages/journal/design-inspection/index.html
+++ b/boselecta/pages/journal/design-inspection/index.html
@@ -71,9 +71,9 @@ FOOTER
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
             </div>
         </div> 
-        <div class="heading container">
+        <!--div class="heading container">
             <span class="img"></span>
-        </div>
+        </div-->
         <div class="container section1 flex">
             <div class="col1 col">
                 <span class="img"></span>
@@ -83,9 +83,9 @@ FOOTER
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
             </div>
         </div>  
-        <div class="heading narrow container">
+        <!--div class="heading narrow container">
             <span class="img"></span>
-        </div>  
+        </div-->  
         <div class="note">
             <small>
                 This case study is a snapshot — I’ve kept it focused to balance work, life, and clarity. <br class="dt-set" />
