--- a/boselecta/pages/journal/user-flow/index.html
+++ b/boselecta/pages/journal/user-flow/index.html
@@ -62,25 +62,48 @@ FOOTER
             <span class="img" style="background-image: url(/assets/img/entry-userflow-heading1.png);"></span>
         </div>
         <div class="container section1 flex">
-            <div class="col1 col">
-                <h4>Refining the Workflow</h4>
-                <p>By streamlining the user flow updates, I automated the process of syncing changes across multiple screens, significantly reducing the time spent on manual revisions. I created a central screen repository, leveraging Figma’s library functionality to ensure consistency in variables, text, and detailing across the project. With the addition of auto-layout, the user flow and sections could evolve independently of UI changes, allowing for seamless updates when screens were adjusted. This systemized approach also kept the team aligned and minimized errors.</p>
+            <div class="col col1">
+                <h4>The Challenge</h4>
+                <p><strong>User flows were previously updated manually</strong> by copying sprint handoff screens into a new version of the flow. Sections had to be dragged into place, and flow lines reconnected each time—making it a laborious and time-consuming task.</p>
+                <p>This process also exposed a deeper issue: the lack of a single source of truth. Without an original, structured base to work from, tracking new screen versions and ensuring consistency across updates became increasingly difficult. It often led to duplication, version mismatches, and time lost chasing clarity.</p>
             </div>
             <div class="col2 col">
-                <h4>What This Unlocked</h4>
-                <p>This automation not only freed up valuable time for deeper design iterations but also helped maintain consistency across the project. With a central repository and Figma libraries in place, updates became more efficient, and cross-team collaboration was improved. This process allowed the design to stay aligned with the development, ensuring that the most current version was always available, and helping us focus on delivering high-quality designs and a seamless user experience."</p>
+                <h4>Refining the Workflow</h4>
+                <p>I began by componentizing much of the app’s UI—eliminating duplication and using Figma’s library functionality to maintain consistency across variables, text styles, and UI details. This foundation allowed me to scale up into a screen repository, organizing different app sections as reusable components with built-in version control.</p>
+
+                <p>Building on that, I started automating the user flow with auto layout. I nested screens from the library into device frames, so whenever I updated a screen, the flow would automatically adjust — even if the screen height changed. This setup meant different parts of the flow could evolve on their own without needing to rebuild everything, making updates much more seamless.</p>
             </div>
         </div> 
         <div class="heading container">
             <span class="img" style="background-image: url(/assets/img/entry-userflow-heading2.png);"></span>
         </div>
+
+        
+
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>What This Unlocked</h4>
+                <ul>
+                    <li><strong>User flows became more naturally integrated</strong> into the final stages of design sprints and handoff files, no longer feeling like a last-minute or reluctant task.</li>
+                    <li><strong>Alignment with the development cycle</strong> helped reduce friction with the QA team, as complete and up-to-date flows were ready for the UAT phase.</li>
+                    <li><strong>For the UX team, the shared screen library became a reliable source of truth</strong>, allowing everyone to pull the latest screens into their projects and significantly reducing inconsistencies during design ideation phases.</li>
+                    <li><strong>The screen library also made tracking changes across screens much easier</strong>, offering a quick, visual way to review progress and updates.</li>
+                </ul>
+            </div>
+            <div class="col2 col">
+                <span class="img"></span>
+            </div>
+        </div> 
+
         <div class="container section1 flex">
             <div class="col1 col">
                 <span class="img"></span>
             </div>
             <div class="col2 col">
                 <h4>The Invisible Work</h4>
-                <p>Often, the most valuable work goes unnoticed until it's missing. By streamlining processes, automating repetitive tasks, and ensuring consistency across design and development, I’ve freed up my team to focus on what truly matters. The time saved by refining workflows isn’t always visible, but the impact is clear—the smoother and more efficient our processes, the more space we have for creativity and problem-solving. The invisible work, like managing variables and maintaining consistency, is what makes everything else possible.</p>
+                <p>Some of the most valuable work in design is also the least visible. Maintaining user flows, managing variables, and keeping systems consistent often go unnoticed—especially when their impact stretches quietly across multiple teams.</p>
+                <p>Many in the organization rely on these flows for different reasons— Directors and PMs planning strategy, New Joiners learning the system, to QA and development tracking changesBut few see the ongoing effort it takes to keep everything aligned and up to date. By streamlining processes, automating repetitive tasks, and building systems that scale, I’ve helped reduce that hidden load.</p>    
+                <p>The result? Less time spent fixing broken pieces, and more time freed for creative thinking and deeper problem-solving. It’s the quiet, foundational work that holds everything together—and makes the visible work shine.</p>
             </div>
         </div>  
         <div class="heading narrow container">
