--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -82,7 +82,7 @@ FOOTER
         <div class="flex">
             <div class="col">
                 <a href="pages/journal/figma-variables/" class="img-wrap">
-                    <span class="img" style="background-image: url(assets/img/entry-variables.png);"></span>
+                    <span class="img" style="background-image: url(assets/img/journal-prev-variables.jpg);"></span>
                 </a>
                 <div class="content">
                     <h4><a href="pages/journal/figma-variables/" title="Refining Figma design tokens">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
@@ -134,7 +134,7 @@ FOOTER
             </div>
         </div>
     </section>
-    <section id="showcase" class="fade casestudy">
+    <!--section id="showcase" class="fade casestudy">
         <div id="casestudy-flip" class="col">
             <div class="img-wrap">
                 <img src="assets/img/showcase-flipjapan.png" alt="">
@@ -156,7 +156,7 @@ FOOTER
                 <p>I enjoyed reimursing myself in FE development and analysing Japanese centric UI design.</p>
             </div>
         </div>
-    </section>
+    </section-->
 
     <script src="assets/js/core.js"></script>
 
