--- a/boselecta/pages/journal/design-inspection/index.html
+++ b/boselecta/pages/journal/design-inspection/index.html
@@ -33,7 +33,7 @@ FOOTER
         <div class="brand">
             <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
-        <a href="/portfolio/boselecta/" class="close"><span class="material-icons">close</span></a>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
         <h2>
@@ -42,9 +42,9 @@ FOOTER
         <p>A hands-on review of a release helps bridge the gap between design intent and final execution, ensuring smooth developer collaboration and a refined user experience.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section id="splash">
+    <!--section id="splash">
             <span class="img"></span>
-    </section>
+    </section-->
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
@@ -55,11 +55,11 @@ FOOTER
                 </blockquote>
             </div>
             <div class="col2 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-inspection1.jpg);"></span>
             </div>
         </div>
         <div class="heading container">
-            <span class="img"></span>
+            <span class="img" style="background-image: url(/assets/img/journal-inspection2.jpg);"></span>
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
@@ -76,7 +76,7 @@ FOOTER
         </div-->
         <div class="container section1 flex">
             <div class="col1 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-inspection3.jpg);"></span>
             </div>
             <div class="col2 col">
                 <h4>More Than Just a Handoff</h4>
