--- a/boselecta/pages/journal/figma-variables/index.html
+++ b/boselecta/pages/journal/figma-variables/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Peter Roper Design</title>
+<title>Design Tokens and Variables | Peter Roper Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <!--meta name="google-site-verification" content="" /-->
@@ -33,7 +33,7 @@ FOOTER
         <div class="brand">
             <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
-        <a href="/portfolio/boselecta/" class="close"><span class="material-icons">close</span></a>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
         <h2>
@@ -42,9 +42,9 @@ FOOTER
         <p>Having worked with front-end code, I know how crucial refined and intuitive styling variables are for a smooth handoff and consistent implementation.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section id="splash">
-        <span class="img"></span>
-    </section>
+    <!--section id="splash">
+        <span class="img" style="background-image: url(/assets/img/journal-top-variables.png);"></span>
+    </section-->
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
@@ -55,36 +55,52 @@ FOOTER
                 </blockquote>
             </div>
             <div class="col2 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-variables2.jpg);"></span>
             </div>
         </div>
-        <div class="heading container">
+        <!--div class="heading container">
             <span class="img"></span>
-        </div>
-        <div class="container section1 flex">
+        </div-->
+        <div class="container flex">
+            <div class="col1 col">
+                <h4>Background</h4>
+                <p>The early phases of Asurion Home+ project involved quick localisation of an existing US product which had a comprehensive component and variable library, but a like for like approach wasnt possible due to evolving requirements for the Japanese service. We had to follow a specific style but also quickly adapt to create our own version. It didnt leave much room to assess things.</p>
+            </div>
             <div class="col1 col">
                 <h4>Breaking It Down</h4>
-                <p>We started by aligning our design system with development practices, choosing rem values to maintain consistency with CSS. While Figma’s limitations presented some challenges, we focused on simplicity. We first defined a set of basic tokens that were easy for developers to follow, then built out more contextual variables for designers. By covering all styling variables, we removed the need for interpretation by both devs and designers, ensuring everything remained small and manageable while offering the right level of detail for visual hierarchy.</p>
+                <p>While the U.S. design system was robust, it lacked the contextual variables needed to efficiently manage colour in a new environment. Text styles didn’t translate well either—Japanese typography and layout rules required a different approach. Since we were working responsively, we also needed a more intuitive and flexible spacing system. As the product iterated rapidly, gaining autonomy over components became essential to meet the specific requirements set by the Japanese team for the local market.</p>
             </div>
-            <div class="col2 col">
-                <h4>The Result</h4>
-                <p>By organizing and structuring these variables, we created a set of CSS root variables that could be applied to a web app with multiple client instances. This gave developers a streamlined, consistent foundation to work from, making implementation smoother. Applying these variables across all screen UIs was a challenging task, but it ultimately eliminated inconsistencies, ensured a cohesive design implementation, and improved collaboration between design and development teams. It also freed the design team to focus more on problem-solving and UX, rather than getting bogged down by visual design details.</p>
-            </div>
-        </div> 
-        <div class="heading container">
-            <span class="img"></span>
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-variables3.jpg);"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Figma Tokens and Variables</h4>
+                <ol>
+                    <li>Reduced the broad US color set into a smaller, more manageable token list, while keeping the original naming convention so it would still align with the dev teams codebase.</li>
+                    <li>Integrated client modes into these colors, making it easy to toggle between different screen UIs.</li>
+                    <li>Applied these tokens contextually as color variables at a small scale—covering text, surfaces, borders, and icons.</li>
+                    <li>Built a responsive sizing system with specific breakpoints, so responsive screens could be easily toggled and adapted as needed.</li>
+                </ol>
+            </div>
+        </div> 
+        <!--div class="heading container">
+            <span class="img"></span>
+        </div-->
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>The Result</h4>
+                <p>By organizing and structuring these variables, we created a set of CSS root variables that could be applied to a web app with multiple client instances. This gave developers a streamlined, consistent foundation to work from, making implementation smoother. Applying these variables across all screen UIs was a challenging task, but it ultimately eliminated inconsistencies, ensured a cohesive design implementation, and improved collaboration between design and development teams.</p>
             </div>
             <div class="col2 col">
                 <h4>It's in the Details</h4>
-                <p>The careful attention to these small details meant our design vision was much more accurately realized in the final product. And perhaps most importantly, developers didn't face unnecessary friction, ensuring a collaborative and efficient process from start to finish.</p>
+                <p>The careful attention to these small details meant our design vision was much more accurately realized in the final product. And perhaps most importantly, developers didn't face unnecessary friction, ensuring a collaborative and efficient process from start to finish. It also freed the design team to focus more on problem-solving and UX, rather than getting bogged down by visual design details.</p>
             </div>
         </div>  
+
         <div class="heading narrow container">
-            <span class="img"></span>
+            <span class="img" style="background-image: url(/assets/img/journal-variables4.jpg);"></span>
         </div>  
         <div class="note">
             <small>
