--- a/boselecta/pages/journal/user-flow/index.html
+++ b/boselecta/pages/journal/user-flow/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Peter Roper Design</title>
+<title>Userflow and Screen Repository | Peter Roper Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <!--meta name="google-site-verification" content="" /-->
@@ -33,7 +33,7 @@ FOOTER
         <div class="brand">
             <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
-        <a href="/portfolio/boselecta/" class="close"><span class="material-icons">close</span></a>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
         <h2>
@@ -42,9 +42,9 @@ FOOTER
         <p>It's easy to skip mapping user flows, but when teams have a shared visual guide, decisions get sharper, and the product comes together more smoothly.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section id="splash">
+    <!--section id="splash">
             <span class="img" style="background-image: url(/assets/img/entry-userflow-top.png);"></span>
-    </section>
+    </section-->
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
@@ -55,12 +55,12 @@ FOOTER
                 </blockquote>
             </div>
             <div class="col2 col">
-                <span class="img" style="background-image: url(/assets/img/entry-userflow-side1.png);"></span>
+                <span class="img" style="background-image: url(/assets/img/journal-userflow1.jpg);"></span>
             </div>
         </div>
-        <div class="heading narrow container">
+        <!--div class="heading narrow container">
             <span class="img" style="background-image: url(/assets/img/entry-userflow-heading1.png);"></span>
-        </div>
+        </div-->
         <div class="container section1 flex">
             <div class="col col1">
                 <h4>The Challenge</h4>
@@ -74,14 +74,15 @@ FOOTER
                 <p>Building on that, I started automating the user flow with auto layout. I nested screens from the library into device frames, so whenever I updated a screen, the flow would automatically adjust — even if the screen height changed. This setup meant different parts of the flow could evolve on their own without needing to rebuild everything, making updates much more seamless.</p>
             </div>
         </div> 
-        <div class="heading container">
+        <!--div class="heading container">
             <span class="img" style="background-image: url(/assets/img/entry-userflow-heading2.png);"></span>
-        </div>
-
-        
+        </div-->
 
         <div class="container section1 flex">
             <div class="col1 col">
+                <span class="img" style="background-image: url(/assets/img/journal-userflow2.jpg);"></span>
+            </div>
+            <div class="col2 col">
                 <h4>What This Unlocked</h4>
                 <ul>
                     <li><strong>User flows became more naturally integrated</strong> into the final stages of design sprints and handoff files, no longer feeling like a last-minute or reluctant task.</li>
@@ -90,24 +91,21 @@ FOOTER
                     <li><strong>The screen library also made tracking changes across screens much easier</strong>, offering a quick, visual way to review progress and updates.</li>
                 </ul>
             </div>
-            <div class="col2 col">
-                <span class="img"></span>
-            </div>
+            
         </div> 
-
         <div class="container section1 flex">
             <div class="col1 col">
-                <span class="img"></span>
-            </div>
-            <div class="col2 col">
                 <h4>The Invisible Work</h4>
                 <p>Some of the most valuable work in design is also the least visible. Maintaining user flows, managing variables, and keeping systems consistent often go unnoticed—especially when their impact stretches quietly across multiple teams.</p>
                 <p>Many in the organization rely on these flows for different reasons— Directors and PMs planning strategy, New Joiners learning the system, to QA and development tracking changesBut few see the ongoing effort it takes to keep everything aligned and up to date. By streamlining processes, automating repetitive tasks, and building systems that scale, I’ve helped reduce that hidden load.</p>    
                 <p>The result? Less time spent fixing broken pieces, and more time freed for creative thinking and deeper problem-solving. It’s the quiet, foundational work that holds everything together—and makes the visible work shine.</p>
             </div>
+            <div class="col2 col">
+                <span class="img" style="background-image: url(/assets/img/journal-userflow3.jpg);"></span>
+            </div>
         </div>  
         <div class="heading narrow container">
-            <span class="img" style="background-image: url(/assets/img/entry-userflow-side2.png);"></span>
+            <span class="img" style="background-image: url(/assets/img/journal-userflow4.jpg);"></span>
         </div>  
         <div class="note">
             <small>
